--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.12.10",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/classnames": "^2.2.11",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^17.0.1",
     "react-image": "^4.0.3",
-    "react-image-gallery": "^1.0.8",
+    "react-number-format": "^4.4.4",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -24,11 +31,7 @@
     "sass": "^1.32.5",
     "typesafe-actions": "^5.1.0",
     "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4",
-    "@babel/core": "^7.12.10",
-    "@types/react-image-gallery": "^1.0.1",
-    "@types/react-redux": "^7.1.16",
-    "@types/react-router-dom": "^5.1.7"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
