--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-select": "^4.0.2",
+    "react-vis": "^1.11.7",
     "reduex": "^1.0.5",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
